--- a/11-springthymeleaf/src/main/resources/templates/initial-form.html
+++ b/11-springthymeleaf/src/main/resources/templates/initial-form.html
@@ -24,6 +24,8 @@
 
         <input type="text" name="studentName" placeholder="Full name" />
 
+        <input type="email" name="studentEmail" />
+
         <input type="submit" />
 
     </form>
