--- a/12-springmvcform/src/main/resources/templates/customer-response.html
+++ b/12-springmvcform/src/main/resources/templates/customer-response.html
@@ -18,6 +18,9 @@
         <h3>Last Name: </h3><span th:text="${customer.lastName}"></span>
     </div>
     <div class="row2">
+        <h3>Postal code: </h3><span th:text="${customer.postalCode}"></span>
+    </div>
+    <div class="row2">
         <h3>No. of guests: </h3><span th:text="${customer.noOfGuest}"></span>
     </div>
 
