--- a/12-springmvcform/src/main/resources/templates/customer-response.html
+++ b/12-springmvcform/src/main/resources/templates/customer-response.html
@@ -23,6 +23,9 @@
     <div class="row2">
         <h3>No. of guests: </h3><span th:text="${customer.noOfGuest}"></span>
     </div>
+    <div class="row2">
+        <h3>Employee ID: </h3><span th:text="${customer.empID}"></span>
+    </div>
 
 </body>
 
