Custom validation with custom value and message is added

--- a/12-springmvcform/src/main/resources/static/css/customer-form.css
+++ b/12-springmvcform/src/main/resources/static/css/customer-form.css
@@ -39,6 +39,13 @@ label {
 input {
     padding: 10px 15px;
 }
+.star {
+    color: red;
+    font-weight: normal;
+}
+#info {
+    font-style: italic;
+}
 #submit {
     border-radius: 8px;
     align-self: center;
