--- a/12-springmvcform/src/main/resources/templates/customer-response.html
+++ b/12-springmvcform/src/main/resources/templates/customer-response.html
@@ -26,6 +26,9 @@
     <div class="row2">
         <h3>Employee ID: </h3><span th:text="${customer.empID}"></span>
     </div>
+    <div class="row2">
+        <h3>Coupon code: </h3><span th:text="${customer.couponCode}"></span>
+    </div>
 
 </body>
 
