--- a/12-springmvcform/src/main/resources/templates/customer-form.html
+++ b/12-springmvcform/src/main/resources/templates/customer-form.html
@@ -11,10 +11,11 @@
 <body>
 
     <h1 id="heading">Customer Form Submission</h1>
+
     <form th:action="@{/process-form}" method="post" th:object="${customer}">
 
         <div class="row">
-            <label>Name </label>
+            <label>Name<span class="star">*</span></label>
             <div class="rowpart">
                 <input type="text" th:field="*{firstName}" placeholder="First Name">
                 <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}" class="error"></span>
@@ -25,26 +26,34 @@
             </div>
         </div>
         <div class="row">
-            <label>Postal code </label>
+            <label>Postal code<span class="star">*</span></label>
             <div class="rowpart">
                 <input type="text" th:field="*{postalCode}" placeholder="6 digit no.">
                 <span th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="error"></span>
             </div>
         </div>
         <div class="row">
-            <label>No. of guests </label>
+            <label>No. of guests<span class="star">*</span></label>
             <div class="rowpart">
                 <input type="number" th:field="*{noOfGuest}">
                 <span th:if="${#fields.hasErrors('noOfGuest')}" th:errors="*{noOfGuest}" class="error"></span>
             </div>
         </div>
         <div class="row">
-            <label>Employee ID no. </label>
+            <label>Employee ID no.<span class="star">*</span></label>
             <div class="rowpart">
-                <input type="text" th:field="*{empID}">
+                <input type="text" th:field="*{empID}" placeholder="EMP ID.">
                 <span th:if="${#fields.hasErrors('empID')}" th:errors="*{empID}" class="error"></span>
             </div>
         </div>
+        <div class="row">
+            <label>Coupon code</label>
+            <div class="rowpart">
+                <input type="text" th:field="*{couponCode}" placeholder="Starts with MVC">
+                <span th:if="${#fields.hasErrors('couponCode')}" th:errors="*{couponCode}" class="error"></span>
+            </div>
+        </div>
+        <p id="info"><span class="star">*</span> denotes a required field</p>
         <input type="submit" value="Submit" id="submit">
 
     </form>
