employee list added with bootstrap after fetching from DB

--- a/12-springmvcform/src/main/resources/templates/customer-form.html
+++ b/12-springmvcform/src/main/resources/templates/customer-form.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Form</title>
     <link rel="stylesheet" th:href="@{/css/customer-form.css}">
+
+    <!-- ------------------------------------- -->
+    <!-- Wait 15 seconds, then redirect to api/employees -->
+    <!-- <meta http-equiv="refresh" content="15; URL='api/employees'"> -->
+    <!-- ------------------------------------- -->
+
 </head>
 
 <body>
