--- a/12-springmvcform/src/main/resources/static/css/list.css
+++ b/12-springmvcform/src/main/resources/static/css/list.css
@@ -6,11 +6,32 @@
 }
 .h1-cover {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    display: flex;
+    justify-content: space-between;
     padding-top: 20px;
     border-bottom: 1px solid black;
     margin: 0px 0px 20px 0px;
 }
+.h1-cover a {
+    font-weight: 500;
+    margin: 8px 0px;
+}
 .narrow-cover {
     width: 75%;
     margin: 0 auto;
+}
+
+.horizontal-mb {
+    display: flex;
+}
+.form-cover {
+    padding: 30px 50px;
+    background-color: #fff;
+}
+.submit-sec {
+    display: flex;
+    height: 40px;
+}
+.submit-btn {
+    right: 0%;
 }
