custom JPA repository is added

--- a/12-springmvcform/src/main/resources/templates/form-employee.html
+++ b/12-springmvcform/src/main/resources/templates/form-employee.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="mb-3 submit-sec">
-                        <a th:href="@{/api/employees}" class="btn btn-outline-dark">Go back to the List</a>
+                        <a th:href="@{/api/employees}" class="btn btn-outline-dark" style="font-weight: 900; ">Go back to the List</a>
                         <button type="submit" class="btn btn-dark submit-btn" style="padding: 10px 20px;">Create</button>
                     </div>
 
