--- a/12-springmvcform/src/main/resources/static/css/list.css
+++ b/12-springmvcform/src/main/resources/static/css/list.css
@@ -25,13 +25,24 @@
     display: flex;
 }
 .form-cover {
-    padding: 30px 50px;
+    padding: 40px 80px;
     background-color: #fff;
 }
 .submit-sec {
+    position: relative;
     display: flex;
     height: 40px;
 }
-.submit-btn {
+.submit-sec button {
+    position: absolute;
     right: 0%;
+    display: flex;
+    align-items: center;
+}
+.operation {
+    display: flex;
+    justify-content:space-evenly;
+}
+.operation a {
+    padding: 8px 20px;
 }
