--- a/12-springmvcform/src/main/resources/templates/list-employees.html
+++ b/12-springmvcform/src/main/resources/templates/list-employees.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
 
             <div class="h1-cover">
                 <h1 style="font-weight: 700;">List of all employees</h1>
-                <a th:href="@{/api/employees/create-employee}" class="btn btn-dark">+ Create Employee</a>
+                <a th:href="@{/api/employees/create-employee}" title="Create" class="btn btn-dark">+ Create Employee</a>
             </div>
 
             <div class="table-cover">
@@ -30,6 +31,7 @@
                             <th>First Name</th>
                             <th>Last Name</th>
                             <th>Email</th>
+                            <th>Operation</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -38,6 +40,14 @@
                             <td th:text="${employee.firstName}"></td>
                             <td th:text="${employee.lastName}"></td>
                             <td th:text="${employee.email}"></td>
+                            <td class="operation">
+                                <a th:href="@{/api/employess/}" title="Update" class="btn btn-dark">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                                <a th:href="@{/api/employess/}" title="Delete" class="btn btn-danger">
+                                    <i class="fa fa-trash"></i>
+                                </a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
