--- a/12-springmvcform/src/main/resources/templates/form-employee.html
+++ b/12-springmvcform/src/main/resources/templates/form-employee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Employee Form</title>
+    <title>Employee Form</title>
     <link rel="stylesheet" th:href="@{/css/list.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -18,12 +18,15 @@
         <div class="narrow-cover">
 
             <div class="h1-cover">
-                <h1 style="font-weight: 700;">Create Employee Form</h1>
+                <h1 style="font-weight: 700;">Employee Form</h1>
             </div>
 
             <div class="form-cover">
                 <form th:action="@{/api/employees/create-employee}" th:object="${employee}" method="post">
 
+                    <!-- Required to handle update, otherwise it will add another entity -->
+                    <input type="hidden" th:field="*{id}">
+                    
                     <div class="mb-3">
                         <span class="form-label">Name</span>
                         <div class="horizontal-mb">
@@ -39,7 +42,7 @@
 
                     <div class="mb-3 submit-sec">
                         <a th:href="@{/api/employees}" class="btn btn-outline-dark" style="font-weight: 900; ">Go back to the List</a>
-                        <button type="submit" class="btn btn-dark submit-btn" style="padding: 10px 20px;">Create</button>
+                        <button type="submit" class="btn btn-dark submit-btn" style="padding: 10px 20px;">Submit</button>
                     </div>
 
                 </form>
