users are added with roles using in memory user detail manager

--- a/13-springmvcsecurity/src/main/resources/templates/home.html
+++ b/13-springmvcsecurity/src/main/resources/templates/home.html
@@ -8,9 +8,12 @@
 
 <body>
 
-    <h1>
+    <h1 style="border-bottom: 1px solid black;">
         Spring MVC Security Home Page
     </h1>
+    <p>
+        Home page of the Spring MVC Security web application
+    </p>
     
 </body>
 </html>
