--- a/13-springmvcsecurity/src/main/resources/templates/home.html
+++ b/13-springmvcsecurity/src/main/resources/templates/home.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    <link rel="stylesheet" th:href="@{/css/dash.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
+    <div class="body-cover">
 
-    <h1 style="border-bottom: 1px solid black;">
-        Spring MVC Security Home Page
-    </h1>
-    <p>
-        Home page of the Spring MVC Security web application
-    </p>
-    
+        <nav class="navbar">
+            <h2>Spring MVC</h2>
+            <form th:action="@{/logout}" method="post">
+                <button type="submit" class="btn btn-danger">
+                    Logout <i class="fa fa-sign-out" style="font-size:25px; margin-left:5px;"></i>
+                </button>
+            </form>
+        </nav>
+        <section class="call-to-action">
+            <h1 class="heading">
+                Spring MVC Security Home Page
+            </h1>
+            <p class="para">
+                Home page of the Spring MVC Security web application
+            </p>
+        </section>
+
+    </div>
 </body>
+
 </html>
