--- a/13-springmvcsecurity/src/main/resources/templates/management.html
+++ b/13-springmvcsecurity/src/main/resources/templates/management.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Management</title>
 
     <link rel="stylesheet" th:href="@{/css/dash.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,24 +19,53 @@
 <body>
     <div class="body-cover">
 
-        <nav class="navbar">
-            <h2>Spring MVC</h2>
-            <form th:action="@{/logout}" method="post">
-                <button type="submit" class="btn btn-danger">
-                    Logout <i class="fa fa-sign-out" style="font-size:25px; margin-left:5px;"></i>
-                </button>
-            </form>
+        <nav class="sidebar">
+            <ul style="padding: 10px 20px;">
+                <li>
+                    <h2 class="app-name">Spring MVC</h2>
+                </li>
+                <li>
+                    <div class="info-card">
+                        <i class="fa fa-user-circle" style="font-size: 55px;"></i>
+                        <span sec:authentication="principal.username" id="user"></span>
+                        <span sec:authentication="principal.authorities" id="role"></span>
+                    </div>
+                </li>
+                <li id="nav-link">
+                    <div>
+                        <a th:href="@{/}" class="list-group-item list-group-item-action"
+                            style="font-weight: bold; height:11vh; display:flex; align-items:center;">Home</a>
+                    </div>
+                    <div sec:authorize="hasRole('MANAGER')">
+                        <a th:href="@{/management}" class="list-group-item list-group-item-action active curr-pos"
+                            style="font-weight: bold; height:11vh; display:flex; align-items:center;">Visit the
+                            management dashboard</a>
+                    </div>
+                    <div sec:authorize="hasRole('ADMIN')">
+                        <a th:href="@{/system}" class="list-group-item list-group-item-action"
+                            style="font-weight: bold; height:11vh; display:flex; align-items:center;">Visit the System
+                            dashboard</a>
+                    </div>
+                </li>
+                <li>
+                    <form th:action="@{/logout}" method="post">
+                        <button type="submit" class="btn btn-danger">
+                            Logout <i class="fa fa-sign-out" style="font-size:25px; margin-left:5px;"></i>
+                        </button>
+                    </form>
+                </li>
+            </ul>
         </nav>
+
         <section class="call-to-action">
+            <p id="top">
+                <a th:href="@{/}">Home</a> > Management
+            </p>
             <h1 class="heading">
-                Spring MVC Security Home Page
+                Spring MVC Security Management
             </h1>
-            <div class="user-role">
-                User : <span sec:authentication="principal.username"></span>
-                Role(s) : <span sec:authentication="principal.authorities"></span>
-            </div>
             <p class="para">
-                Home page of the Spring MVC Security web application
+                Manage Spring MVC Security web application
             </p>
         </section>
 
